--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -120,13 +120,12 @@
                             <h3 class="weeks">WEEKS</h3>
                         </div>
                         <div class="col-md-9 col-xs-9">
-                            <h1>Extend a game plan for the world's longest-lasting, chewable flea and tick protection.</h1>
+                            <h1>Extend a game plan for longer-lasting protection.</h1>
                         </div>
                     </div>
-                    <div class="bottom-jumbo-overlay">
+                    <div class="bottom-jumbo-overlay bravecto">
                         <h4>
-                            Provide the best care available with an innovative flea and tick treatment that lasts up to 12 weeks - longer than any other
-                            chew available. And let pet owners and their dogs enjoy more time closer together, doing the things they love.
+                            Offer Bravecto and provide the best care without compromising efficacy, safety or convenience. Now you can prescribe the innovative flea and tick treatment that lasts up to 12 weeks* – longer than any other chewable or monthly topical available. And, let pet owners and their dogs enjoy more time closer together, doing the things they love.
                         </h4>
                     </div>
                 </div>
@@ -139,10 +138,10 @@
                     <h2 class="support">
                         SUPPORT
                     </h2>
-                    <p>Get access to exclusive tools and resources to help you connect with and educate your customers.</p>
+                    <p>Enhance communications in person and online with new and existing customers to provide the best care to the dogs in your community.</p>
                     <p>
-                        <a class="btn btn-default" href="/support" role="button">
-                            READ MORE
+                        <a class="btn btn-default login-link" href="" role="button">
+                            LEARN MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </p>
@@ -152,10 +151,10 @@
                     <h2 class="innovation">
                         INNOVATION
                     </h2>
-                    <p>Learn about the breakthrough treatment that extends flea and tick protection up to 12 weeks.</p>
+                    <p>Offer a treatment pet owners can’t get anywhere else and establish your business as a go-to source for leading-edge treatments with Bravecto. </p>
                     <p>
-                        <a class="btn btn-default" href="/innovation" role="button">
-                            READ MORE
+                        <a class="btn btn-default login-link" href="" role="button">
+                            LEARN MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </p>
@@ -165,10 +164,10 @@
                     <h2 class="adherence">
                         ADHERENCE
                     </h2>
-                    <p>Close adherence gaps with extended protection, so there are fewer chances for pet owners to forget.</p>
+                    <p>Give pet owners fewer chances to forget with the chewable treatment that lasts up to 12 weeks – so the dogs you treat are protected for longer.</p>
                     <p>
-                        <a class="btn btn-default" href="/adherence" role="button">
-                            READ MORE
+                        <a class="btn btn-default login-link" href="" role="button">
+                            LEARN MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </p>
@@ -177,10 +176,13 @@
         </div>
         <div class="full-container green">
             <div class="container">
-                <h2>Extend a faster-acting treatment</h2>
+                <h2>Extend flea and tick protection up to 12 weeks in a single chew. </h2>
                 <p>
-                    While other agents can take anywhere from 8 to 18 hours to kick in, now you can prescribe a treatment that starts working within 2 hours
-                    - and reaches 100% efficacy in just 24 hours.
+                    With Bravecto, you can prescribe a treatment that works faster and lasts longer than any other chewable
+                    or monthly topical available. Working quickly, Bravecto begins killing in just 2 hours –
+                    and maintains its efficacy against both fleas and ticks for up to a full 12 weeks*.
+                    Plus, it’s been clinically proven safe for pregnant, lactating and breeding dogs, as well as “Ivermectin-sensitive” dogs  –
+                    so you can extend the best care to every dog you treat and give them more time with their families.
                 </p>
                 <p>
                     Learn more about this faster-acting, longer-lasting chewable treatment now.
@@ -188,13 +190,13 @@
                 <div class="row">
                     <div class="col-sm-3 col-sm-offset-3">
                         <a class="btn btn-default" href="#" role="button">
-                            SCHEDULE A MEETING
+                            REGISTER NOW
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </div>
                     <div class="col-sm-3">
                         <a class="btn btn-default" href="#" role="button">
-                            REGISTER NOW
+                            SCHEDULE A MEETING
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </div>
@@ -214,19 +216,22 @@
     </div>
     <div id="innovation">
         <div class="container static-body">
-            <h2 class="blue">IMPROVE COMMUNICATION WITH CUSTOMERS AND ENHANCE YOUR PRACTICE.</h2>
+            <h2 class="blue">IMPROVE COMMUNICATION WITH EXISTING CUSTOMERS AND ENGAGE NEW CUSTOMERS.</h2>
             <p>
-                Stay up to date with clinical research, expand your social media visibility, and create new and stronger customer
-                relationships when you partner with us. <a href="/contact-us">
-                    <span class="orange">Contact your sales representative</span>
-                </a> today to learn
-                how you can grow your relationship with new and existing customers or log in now.
+                Pet owners want to know that they’re getting the best care for their dogs. When you offer Bravecto, you gain materials for your office, a PR toolkit, informational resources and social media tools to help you educate pet owners about the new treatment, build stronger relationships with your customers – and drive new pet owners to your door.
+            </p>
+            <p>
+                And, with 70% of pet owners reviewing pet-related topics online every week,1 making your presence known online has become a business imperative. Plus, a recent survey found that 14% of pet owners have a Facebook page for their dog – so you could even connect with pet owners through their dog’s own Facebook page!
+            </p>
+            <p>
+                BravoVets – an exclusive, easy-to-use social tool – can help you connect with the 69% of adults that are on social media. By linking your Facebook and Twitter business accounts with BravoVets, you’re empowered by a single platform that enables you to engage your clients, deliver important news, and build trust outside of your office.
             </p>
             <p>
                 <a href="" class="login-link">
-                    LOG IN TO LEARN MORE
-                    <i class="icon icon-arrow-right"></i>
-                </a>
+                    Log in now
+                </a> to learn how Bravecto can help you grow your relationships with new and existing customers – or <a href="/contact-us">
+                    <span class="orange">contact your MSD sales representative</span>
+                </a> to get started.
             </p>
         </div>
         <div class="static-section innovation">
@@ -238,17 +243,22 @@
         </div>
 
         <div class="container static-body">
-            <h2 class="purple">TAKE EFFICACY FURTHER THAN EVER BEFORE WITH THE LATEST INNOVATION IN TREATMENT</h2>
+            <h2 class="purple">TAKE SAFETY AND EFFICACY FURTHER THAN EVER BEFORE WITH THE BIGGEST INNOVATION IN OVER A DECADE.</h2>
             <p>
-                Now it's possible to effectively protect against fleas and ticks for a full 12 weeks with a single chew.
-                That's about 3X longer than any other chew ever developed. <a href="/contact-us"><span class="orange">Contact your sales representative</span></a> today to learn
-                more about this innovative alternative to monthly OTC treatments or log in now.
+                In an ever-growing world, relevancy is the hallmark of a successful business. For veterinarians, that means keeping up with the latest treatments in order to provide the best care to the animals they treat. By prescribing the first and only chewable treatment to effectively protect against fleas and ticks for up to 12 full weeks, you can be confident that you’re delivering the care that will keep pet owners coming back – and recommending your practice to their friends.
+            </p>
+            <p>
+                Bravecto’s excellent safety and efficacy is all thanks to its breakthrough molecule, Fluralaner. Proven safe for all dogs, Bravecto starts killing and protecting in just 2 hours of administration – reaching 100% in 12 hours – and maintains its efficacy for up to 3X longer than any other chewable or monthly topical treatment available.
+            </p>
+            <p>
+                Only you can deliver the innovation of prescription-only Bravecto.
             </p>
             <p>
                 <a href="" class="login-link">
-                    LOG IN TO LEARN MORE
-                    <i class="icon icon-arrow-right"></i>
-                </a>
+                    Log in now
+                </a> to learn more about this innovative alternative to monthly treatments – or <a href="/contact-us">
+                    <span class="orange">contact your MSD sales representative</span>
+                </a> to get started.
             </p>
         </div>
     </div>
@@ -261,19 +271,36 @@
             </div>
         </div>
         <div class="container static-body">
-            <h2 class="red">PREVENT GAPS IN COMPLIANCE WITH FEWER TREATMENTS TO FORGET</h2>
+            <h2 class="red">PREVENT GAPS IN PROTECTION WITH FEWER TREATMENTS TO FORGET.</h2>
             <p>
-                The average dog is treated for fleas and ticks only 2.8 months out of the year. Help improve compliance by giving
-                pet owners fewer chances to forget with a treatment that lasts 12 full weeks. <a href="/contact-us">
-                    <span class="orange">Contact your sales representative</span>
-                </a> today to learn
-                today to learn more about preventing gaps in protection for every dog you treat or log in now.
+                Parasiticide sales and market size data suggests that, on average, dogs only receive protection from fleas and ticks 2.8 months a year3 – meaning most dogs are at risk for infestation and vector-borne diseases nearly 9 months a year. And, with ticks spreading into new territories worldwide, those threats have become even greater.
+            </p>
+            <p>
+                Give pet owners fewer chances to forget with a treatment that provides nearly a year of protection in just four individual 12-week doses. And, as prescription-only, you can set a game plan to knock out gaps in protection by scheduling times for pet owners to pick up Bravecto ahead of time.
             </p>
             <p>
                 <a href="" class="login-link">
-                    LOG IN TO LEARN MORE
-                    <i class="icon icon-arrow-right"></i>
-                </a>
+                    Log in now
+                </a> to learn more about preventing gaps in protection for every dog you treat
+                – or <a href="/contact-us">
+                    <span class="orange">contact your MSD sales representative</span>
+                </a> to get started.
+            </p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <p>
+                <sup>*</sup> BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing. The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
+            </p>
+            <p>
+                <sup>1</sup> Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
+            </p>
+            <p>
+                <sup>2</sup> Rainie L, Smith A, Duggan M. Coming and going on Facebook. Pew Internet & American Life Project. 2013. A project of the PewResearchCenter, Washington, DC.
+            </p>
+            <p>
+                <sup>3</sup> Beck S, Schein E, Baldermann C, von Samson-Himmelstjerna G, Kohn B. Tick infestation and tick prophylaxis in dogs in the area of Berlin/Brandenburg: results of a questionnaire study. Berliner und Münchener Tierärztliche Wochenschrift 126, Heft 1/2 (2013) Seiten 6–76.
             </p>
         </div>
     </div>
