--- a/ProfSite/Views/BravoVets/about-us.cshtml
+++ b/ProfSite/Views/BravoVets/about-us.cshtml
@@ -13,12 +13,11 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>About Merck Animal Health</h1>
+                <h1>About MSD</h1>
             </div>
-            <div class="bottom-jumbo-overlay">
+            <div class="bottom-jumbo-overlay bottomopaque">
                 <h4>
-                    Merck Animal Health, the provider of Bravecto, is a global, research-driven company that develops,
-                    manufactures and markets a broad range of veterinary medicines and services.
+                    MSD Animal Health, the manufacturer of Bravecto, is a global, research-driven company that develops, manufactures and markets a broad range of veterinary medicines and services. 
                 </h4>
             </div>
         </div>
