--- a/ProfSite/Views/BravoVets/adherence.cshtml
+++ b/ProfSite/Views/BravoVets/adherence.cshtml
@@ -30,12 +30,12 @@
         <h2>CLOSE THE ADHERENCE GAP.</h2>
         <h3>Help reduce time between treatments with fewer, easier doses.</h3>
         <p>
-            Did you know that the average dog is treated for fleas and ticks only 2.8 months of the year?1 What’s more, studies have found that topical, once-a-month products are used correctly in less than 12% of dogs.
+            Did you know that the average dog is treated for fleas and ticks only 2.8 months of the year?<sup>1</sup> What’s more, studies have found that topical, once-a-month products are used correctly in less than 12% of dogs.
             That means that dogs spend most of the year unprotected – or insufficiently protected.
         </p>
         <p>
             With Bravecto, dogs are protected from fleas and ticks for up to 12 full weeks per treatment. That’s up to 3X longer than monthly treatments – meaning fewer chances for pet owners to forget or administer treatments incorrectly.
-            <a href="/contact-us">Contact your Merck sales representative to learn about prescribing Bravecto today.</a>
+            <a href="/contact-us">Contact your MSD sales representative to learn about prescribing Bravecto today.</a>
         </p>
     </div>
 </div>
