--- a/ProfSite/Views/BravoVets/index.cshtml
+++ b/ProfSite/Views/BravoVets/index.cshtml
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="jumbo-home-overlay">
                     <div class="row top-jumbo-overlay">
-                        <h1>Extend super-long lasting protection in a flash.</h1>
+                        <h1>Extend super long-lasting protection in a flash.</h1>
                     </div>
                     <div class="bottom-jumbo-overlay">
                         <h4>
@@ -36,14 +36,23 @@
                 </div>
             </div>
             <div class="container">
+                <div class="row selector-row aboveboxes">
+                    <div class="col-md-12">
+                        <div class="selection-panel">
+                            <p>
+                                You strive to provide the best protection to the dogs in your care. Providing the first and only chewable flea and tick treatment that lasts up to 12 weeks can be an important contributor to your goal. Discover more about the breakthrough treatment veterinarians and pet owners around the world have been talking about.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="row selector-row">
                     <div class="col-md-6">
                         <div class="selection-panel">
                             <h3>VETERINARY<br />PROFESSIONALS</h3>
                             <p>
-                                Get the support you need to prescribe safe,<br />
-                                broad-spectrum protection to all dogs that acts<br />
-                                faster and lasts longer - no matter what adventures they get into.
+                                Get closer with pet owners to prescribe <br />the fast-acting,
+                                longest-lasting chewable protection for every dog you treat –
+                                so they’re both prepared for every adventure.
                             </p>
                             <p>
                                 <a href="/bravecto" class="btn btn-default">
@@ -64,7 +73,7 @@
                             </p>
                             <p>
                                 <a href="/bravopets" class="btn btn-default">
-                                    GO TO OWNER SITE
+                                    GO TO PET OWNER SITE
                                     <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                                 </a>
                             </p>
