--- a/ProfSite/Views/BravoVets/innovation.cshtml
+++ b/ProfSite/Views/BravoVets/innovation.cshtml
@@ -32,13 +32,13 @@
         <p>
             Bravecto’s rapid onset, long-lasting capability is all thanks to its breakthrough molecule: fluralaner.
             It’s a member of the isoxazoline class – the first new insecticide class in more than a decade.
-            Studies have shown no known insect or tick resistance.1 And, by extending protection against flea and
+            Studies have shown no known insect or tick resistance.<sup>1</sup> And, by extending protection against flea and
             tick infestations up to 12 full weeks,* fluralaner’s efficacy lasts up to 3X <span class="italic">longer</span> than the active
             ingredients in traditional monthly treatments –
             so your customers and their dogs can enjoy more time together, worry-free.
         </p>
         <p>
-            <a href="/contact-us">Contact your Merck sales representative</a> to learn about prescribing Bravecto today.
+            <a href="/contact-us">Contact your MSD sales representative</a> to learn about prescribing Bravecto today.
         </p>
     </div>
 </div>
@@ -50,6 +50,7 @@
         <h2>How fluralaner works.</h2>
         <p>
             Once Bravecto is administered, existing fleas and ticks take up fluralaner. Fluralaner then inhibits the GABA- and Glutamate-gated chloride channels from the parasite’s nervous systems (with GABA being the primary target).
+            <br />
             <br />
             In this process, the fluralaner molecule binds to the GABA receptor, making it so chloride ions can no longer pass through the channel and the inhibitory signal fails to materialize. This leads to nerve overstimulation – ultimately killing the fleas and ticks.
             <br />
