--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -40,17 +40,12 @@
                 </tr>
                 <tr>
                     <td>
-                        4.4-9.9 lbs
+                        4.4-9.9 lbs.
                     </td>
                 </tr>
                 <tr>
                     <td>
                         112.5 mg
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1 chew
                     </td>
                 </tr>
             </table>
@@ -69,17 +64,12 @@
                 </tr>
                 <tr>
                     <td>
-                        9.9-22.0 lbs
+                        >9.9-22.0 lbs.
                     </td>
                 </tr>
                 <tr>
                     <td>
                         250 mg
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1 chew
                     </td>
                 </tr>
             </table>
@@ -98,17 +88,12 @@
                 </tr>
                 <tr>
                     <td>
-                        22.0-44.0 lbs
+                        >22.0-44.0 lbs.
                     </td>
                 </tr>
                 <tr>
                     <td>
                         500 mg
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1 chew
                     </td>
                 </tr>
             </table>
@@ -127,17 +112,12 @@
                 </tr>
                 <tr>
                     <td>
-                        44.0-88.0 lbs
+                        >44.0-88.0 lbs.
                     </td>
                 </tr>
                 <tr>
                     <td>
                         1000 mg
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1 chew
                     </td>
                 </tr>
             </table>
@@ -156,17 +136,12 @@
                 </tr>
                 <tr>
                     <td>
-                        88.0-123.0** lbs
+                        >88.0-123.0** lbs.
                     </td>
                 </tr>
                 <tr>
                     <td>
                         1400 mg
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1 chew
                     </td>
                 </tr>
             </table>
@@ -176,7 +151,7 @@
         <strong>Available in boxes of 1 or 2 chewables!</strong>
     </p>
     <div class="row simpleheaderrow">
-        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE<br /> PROTECTION FROM FLEA AND TICK INFESTATIONS.</h2>
+        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE <br />PROTECTION FROM FLEA AND TICK INFESTATIONS.</h2>
         <p>
             Bravecto is a tasty chewable flea and tick treatment that gives dogs up to 12 weeks of protection
             against fleas and ticks. Covering a wide range of fleas and ticks in every breed, Bravecto can be
@@ -191,7 +166,7 @@
             keeping you in closer touch with your customers, and deepening your relationships.
         </p>
         <p>
-            <a class="orange" href="/bravecto/contact-us"><span class="orange">Contact your Merck sales representative</span></a> today to learn more
+            <a class="orange" href="/bravecto/contact-us"><span class="orange">Contact your MSD sales representative</span></a> today to learn more
             and start prescribing Bravecto to the dogs you treat.
         </p>
         <p>
@@ -208,7 +183,7 @@
     </div>
     <div class="row">
         <p>
-            * &nbsp;BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            * &nbsp;BRAVECTO is effective against <span class="italic">Rhipicephalus sanguineus</span> (brown dog tick) for 8 weeks after dosing.
             The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
         <p>
