--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -30,7 +30,7 @@
             <div class="col-md-6">
                 <h3>FILTER CONTENT BY TOPIC / TYPE</h3>
                 <p>
-                    Check the boxes to the right to find curated posts to share, specific to content topic or type
+                    Check the boxes to the right to find curated posts to share, specific to content topic or type.
                 </p>
             </div>
             <div class="col-md-6">
@@ -174,7 +174,7 @@
     <div class="load-more-row row">
         <div class="col-md-6 col-lg-offset-3">
             <a href="#" class="load-more">
-                LOAD MORE RESOURCES<br />
+                LOAD MORE POSTS<br />
                 <i class="glyphicon glyphicon-arrow-down"></i>
             </a>
         </div>
