--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4>
-                    Partner with Merck Animal Health for the support you need to provide the best care to your customers.
+                    Partner with MSD for the support you need to provide the best care to your customers.
                 </h4>
             </div>
         </div>
@@ -30,7 +30,7 @@
         <h3>Enhance communications to provide the best care <br />and grow your practice.</h3>
         <p>
             Pet owners are much more likely to follow your recommendations if they understand the full value
-            of a medication - for both their dogs and themselves. When you partner with Merck, we help you
+            of a medication - for both their dogs and themselves. When you partner with MSD, we help you
             improve those communications - and drive new customers to your clinic.
         </p>
     </div>
@@ -42,8 +42,8 @@
     <div class="static-overlay bggreen">
         <h2>MORE TOOLS YOU NEED TO BRING CLIENTS TO YOUR DOOR.</h2>
         <p>
-            By partnering with Merck, you get the ability to further connect with pet owners
-            through a variety of tactics.
+            By partnering with MSD, you get the ability to further connect with pet owners
+            through a variety of tactics;
         </p>
     </div>
     <div class="support-items col-md-10 col-md-offset-1">
@@ -52,36 +52,43 @@
                 <img src="~/Content/img/Bravecto_Support_img2.jpg" />
                 <p>
                     <span class="header">Consumer marketing efforts </span>
-                    - Encourage new and existing customers to come to your office to inquire about and purchase Bravecto with a Bravecto PR toolkit including sample website language, press releases and radio scripts, and guidelines for social media
+                    Encourage new and existing customers to come to your office to inquire about and
+                    purchase Bravecto with a Bravecto PR toolkit, including sample website language,
+                    press releases and radio scripts, and guidelines for social media.
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img3.jpg" />
                 <p>
                     <span class="header">Shareable content for your clients </span>
-                    - Educate pet owners about the benefits of Bravecto and how to better care for their dogs with shareable content, such as postcards, emails, leaflets, infographics and engaging videos
+                    Educate pet owners about the benefits of Bravecto and how to better care for their
+                    dogs with shareable content, such as postcards, emails, leaflets, infographics and engaging videos.
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img4.jpg" />
                 <p>
                     <span class="header">BravoVets </span>
-                    – Consolidate your Facebook and Twitter business accounts into one exclusive, easy-to-use tool. Gain curated content posts that are ready to share with your followers, so you can expand your social media visibility and drive pet owners and existing customers to your office from online – all while keeping yourself up to date on clinical research.
-                    <a href="#">Learn more about why your veterinary practice should have a presence in social media</a>
+                    Consolidate your Facebook and Twitter business accounts into one exclusive, easy-to-use tool. Gain curated content
+                    posts that are ready to share with your followers, so you can expand your social media visibility and drive pet
+                    owners and existing customers to your office from online – all while keeping yourself up to date on clinical research.
+                    <a href="#unleashsection">Learn more about why your veterinary practice should have a presence in social media</a>
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img4.jpg" />
                 <p>
                     <span class="header">Materials for your office</span>
-                    – Reinforce your recommendations for flea & tick treatment with educational materials and in-office displays that engage pet owners while they wait
+                    Reinforce your recommendations for flea & tick treatment with educational materials and in-office displays
+                    that engage pet owners while they wait.
                 </p>
             </li>
             <li class="clearfix">
                 <img src="~/Content/img/Bravecto_Support_img4.jpg" />
                 <p>
                     <span class="header">Training for staff</span>
-                    – Help all of your staff better communicate with pet owners and extend the best of care into their interactions to help build trust and loyalty for your practice
+                    Help all of your staff better communicate with pet owners and extend the best of care into
+                    their interactions to help build trust and loyalty for your practice.
                 </p>
             </li>
         </ul>
@@ -92,7 +99,7 @@
             <h3>THE ROLE OF BRAVECTO</h3>
             <p>
                 Discover the benefits of partnering with
-                Merck with "The Role of Bravecto"
+                MSD with "The Role of Bravecto"
             </p>
             <a class="btn btn-default" href="#">
                 DOWNLOAD PDF
@@ -126,7 +133,7 @@
                     </p>
                 </div>
                 <div class="col-md-3">
-                    <h3>DELIVERY INNOVATIVE<br />PRODUCTS</h3>
+                    <h3>DELIVER INNOVATIVE<br />PRODUCTS</h3>
                     <p>
                         Provide products that aren't available
                         in over-the-counter venues.
@@ -147,9 +154,9 @@
     <div class="static-body-content">
         <h2>Together, we can provide the best care to every animal you treat.</h2>
         <p>
-            When you partner with Merck Animal Health, you can provide products and services that enable pets and their owners to enjoy their time together - by keeping
+            When you partner with MSD, you can provide products and services that enable pets and their owners to enjoy their time together - by keeping
             them healthy along the way. From training to marketing to creating a social media presence,
-            Merck is there for you every step of the way. With Merck at your side, you can have the confidence that, when you prescribe Bravecto, you’re prescribing the longest lasting, high-quality flea and tick treatment available in a chew.
+            MSD is there for you every step of the way. With MSD at your side, you can have the confidence that, when you prescribe Bravecto, you’re prescribing the longest lasting, high-quality flea and tick treatment available in a chew.
         </p>
     </div>
     <div class="bottom-support-download-row col-md-8 col-md-offset-2">
@@ -172,7 +179,7 @@
         </div>
     </div>
 </div>
-<div class="static-body support-body grey">
+<div id="unleashsection" class="static-body support-body grey">
     <div class="container">
         <div class="row">
             <h2>UNLEASH THE POWER OF SOCIAL MEDIA FOR YOUR PRACTICE.</h2>
@@ -180,7 +187,7 @@
                 Your online presence is the single most powerful tool available for building engagement and involvement
                 with pet owners. That's because pet owners actively seek out new ways to connect with like-minded
                 animal lovers and find useful information about pet health and wellness via the internet. In fact,
-                70% of pet owners spend up to 30 minutes per week reviewing pet-related topics online<sup>1</sup>.
+                70% of pet owners spend up to 30 minutes per week reviewing pet-related topics online.<sup>1</sup>
             </p>
         </div>
         <div class="row">
@@ -218,7 +225,7 @@
             <p>
                 See how you can help increase business by
                 bringing new and more dogs to your clinic by
-                prescribing Bravecto with <a href="#">this new analysis</a>
+                prescribing Bravecto with this new analysis.
             </p>
             <a class="btn btn-default" href="#">
                 DOWNLOAD PDF
@@ -242,7 +249,7 @@
 <div class="container static-body support-body">
     <div class="static-body-content">
         <p>
-            Hear from other veterinary professionals in your area about their experiences partnering with Merck
+            Hear from other veterinary professionals in your area about their experiences partnering with MSD
             Animal Health and prescribing Bravecto to their clients.
         </p>
     </div>
