--- a/ProfSite/Views/Bravopets/index.cshtml
+++ b/ProfSite/Views/Bravopets/index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     ViewBag.Title = "BravoPets";
-    ViewBag.SelectedNode = "protection";
     Layout = "~/Views/Shared/_LayoutBravoPets.cshtml";
 }
 <div id="side-nav">
@@ -16,6 +15,9 @@
         </li>
         <li class="safety">
             <a href="#safety">&nbsp;</a>
+        </li>
+        <li class="faq">
+            <a href="#faq">&nbsp;</a>
         </li>
     </ul>
 </div>
@@ -122,7 +124,7 @@
                 <img src="~/Content/img/calendar_icon.png" />
                 <h4>THE LONGEST-LASTING<br />CHEW EVER</h4>
                 <p>
-                    Keeps dogs protected for up to 12 full weeks.*
+                    Keeps dogs protected for up to 12 full weeks.
                 </p>
             </div>
             <div class="col-md-4">
@@ -177,16 +179,20 @@
         <div class="container">
             <h2>LOOK OUT FOR THE ONE THAT'S ALWAYS LOOKING OUT FOR YOU.</h2>
             <p>
-                Parasiticide sales and market size data suggests that directions from the vet to the owner to apply treatments monthly are often not followed1 – on average, dogs only receive protection from fleas and ticks 2.8 months out of the year. That means that, for nearly 9 months every year, many dogs are at risk for infestations – and may have an increased risk of exposure to the diseases that fleas and ticks carry. This is a big problem, as ticks are known to carry multiple infections that can lead to greater health risks.
+                Parasiticide sales and market size data suggests that directions from the vet to the owner to apply treatments
+                monthly are often not followed <sup>3</sup> – on average, dogs only receive protection from fleas and ticks 2.8 months out of the year.
+                That means that, for nearly 9 months every year, many dogs are at risk for infestations –
+                and may have an increased risk of exposure to the diseases that fleas and ticks carry.
+                This is a big problem, as ticks are known to carry multiple infections that can lead to greater health risks.
             </p>
             <p>
-                And, as wildlife populations, forest habitats and weather patterns change,<sup>3</sup> ticks have expanded into new territories – making them more prevalent worldwide than ever before.
+                And, as wildlife populations, forest habitats and weather patterns change,<sup>4</sup> ticks have expanded into new territories – making them more prevalent worldwide than ever before.
             </p>
             <p>
                 With just one Bravecto chew, fleas and ticks don’t stand a chance. Protect your dog from irritations and reduce the risk of tick-borne diseases with a chew that provides nearly a full-year coverage in just 4 doses. Keep your dog healthier, longer with the first and only chew that lasts up to 12 full weeks – that’s up to 3X longer than any other chewable or topical treatment available.
             </p>
             <p>
-                Only your vet can provide this length of protection from flea- and tick-borne diseases.<strong>Ask your vet about <a href="#">Bravecto</a> today.</strong>
+                Only your vet can provide this length of protection from flea- and tick-borne diseases. <strong>Ask your vet about Bravecto today.</strong>
             </p>
             <div class="row health-items">
                 <div class="col-md-4">
@@ -256,48 +262,15 @@
             <p>
                 And, because <a href="#">Bravecto</a> works from the inside out, you, your family and other pets are not exposed to the chemical formula – unlike with traditional topical flea and tick treatments.
                 <br />
-                Only your vet can provide the best and most convenient care that doesn’t compromise on efficacy and safety. <strong>Ask them about <a href="#">Bravecto</a> today.</strong>
+                Only your vet can provide the best and most convenient care that doesn’t compromise on efficacy and safety. <strong>Ask them about Bravecto today.</strong>
             </p>
         </div>
-        <div class="container">
-            <div class="row safety-list-items-row">
-                <div class="col-md-6">
-                    <p>
-                        This breakthrough treatment has been proven safe
-                        for all dogs at 5X the maximum clinical dose - with no
-                        known side effects! - including:
-                    </p>
-                    <ul class="list-unstyled safety-list">
-                        <li class="clearfix">
-                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
-                            <p>Dogs as young as 6 months old, that are at least 4.4 lbs.</p>
-                        </li>
-                        <li class="clearfix">
-                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
-                            <p>Breeding, pregnant or lactating dogs</p>
-                        </li>
-                        <li class="clearfix">
-                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
-                            <p>"Ivermerctin-sensitive" dogs</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <p>
-                        Plus, since it works from the inside out, you, your family or other pets
-                        are always safe from exposure - no matter what kind of adventure you're on.
-                    </p>
-                    <p>
-                        Whether out saving the world or making splash, you can be sure that your dog will be protected
-                        for up to 12 weeks. Ask your vet about <span class="orange">the longest-lasting chewable treatment available.</span>
-                    </p>
-                </div>
-            </div>
-        </div>
     </div>
+</div>
+<div id="faq">
     <div class="static-body safety">
         <div class="container">
-            <h2>FAQs</h2>
+            <h2>BRAVECTO FAQs</h2>
             <p>Get quick answers to some of the most frequently asked questions – or contact your vet to learn more about Bravecto.</p>
             <ul class="list-unstyled faq-list">
                 <li class="question-item">
@@ -311,7 +284,7 @@
                 </li>
                 <li class="question-item">
                     <div class="question">
-                        <p>How does this treatment kill fleas and ticks?</p>
+                        <p>How does Bravecto kill fleas and ticks?</p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
@@ -322,7 +295,7 @@
                             Within 12 hours of treatment, 100% of exposed fleas and ticks are dead.
                             Bravecto kills fleas, prevents flea infestations and kills common ticks
                             (<span class="italic">ixodes ricinus, dermacentor variabilis and dermacentor reticulatus</span>)
-                            for up to 12 weeks. Bravecto also kills Rhipicephalus sanguineus for up to 8 weeks.
+                            for up to 12 weeks. Bravecto also kills <span class="italic">Rhipicephalus sanguineus</span> for up to 8 weeks.
                         </p>
                     </div>
                 </li>
@@ -341,7 +314,7 @@
                 <li class="question-item">
                     <div class="question">
                         <p>
-                            Can I give this to my cat?
+                            Can I give Bravecto my to cat?
                         </p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
@@ -352,12 +325,15 @@
                 <li class="question-item">
                     <div class="question">
                         <p>
-                            How palatable is it?
+                            How palatable is Bravecto?
                         </p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p>In a US field study where dogs were treated at home, over 93% of dogs ate the tablet voluntarily—either by itself or with food.<sup>4</sup></p>
+                        <p>
+                            In a US field study where dogs were treated at home, over 93% of dogs ate the tablet voluntarily—either by itself
+                            or with food.<sup>5</sup>
+                        </p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -374,7 +350,7 @@
                 <li class="question-item">
                     <div class="question">
                         <p>
-                            Do the chewable tablets contain wheat or gluten?
+                            Do Bravecto chewables contain wheat or gluten?
                         </p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
@@ -392,17 +368,17 @@
     </div>
     <div class="row">
         <p>
-            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            * BRAVECTO is effective against <span class="italic">Rhipicephalus sanguineus</span> (brown dog tick) for 8 weeks after dosing.
             The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
         <p>
-            1,2  Walther, Feli M., Mark J. Allan, Rainer KA Roepke, and Martin C. Nuernberger. "Efficacy of Indoxacarb Applied to Cats against the Adult Cat Flea, Ctenocephalides Felis, Flea Eggs and Adult Flea Emergence." Parasites & Vectors. N.p., 2014. Web. 20 Feb. 2015.
+            1,2 Walther, Feli M., Mark J. Allan, Rainer KA Roepke, and Martin C. Nuernberger. "Efficacy of Indoxacarb Applied to Cats against the Adult Cat Flea, Ctenocephalides Felis, Flea Eggs and Adult Flea Emergence." Parasites & Vectors. N.p., 2014. Web. 20 Feb. 2015.
         </p>
         <p>
-            3 Beck S, Schein E, Baldermann C, von Samson-Himmelstjerna G, Kohn B. Tick infestation and tick prophylaxis in dogs in the area of Berlin/Brandenburg: results of a questionnaire study. Berliner und Münchener Tierärztliche Wochenschrift 126, Heft 1/2 (2013) Seiten 6–76.
+            3, 5 Data on file based on CEESA estimated ectoparasite product sales for 2013 and global estimates of the pet population visiting veterinarians in 2013.
         </p>
         <p>
-            4 Braun, David. "Disease-Spreading Ticks on the Move as Climate Changes." National Geographic. N.p., 07 Sept. 2012. Web. 13 Feb. 2015.
+            4  Braun, David. "Disease-Spreading Ticks on the Move as Climate Changes." National Geographic. N.p., 07 Sept. 2012. Web. 13 Feb. 2015.
         </p>
         <p>
             Copyright© 2015 Intervet, Inc., a subsidiary of Merck & Co., Inc. All rights reserved.
