--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend your resources</h1>
+                <h1>Extend your resources.</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4>
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-6">
                 <p>
-                    Merck Animal Health, the maker of Bravecto, is here to help you fully understand our new product
+                   MSD, the maker of Bravecto, is here to help you fully understand our new product
                     so that you can confidently prescribe it to your customers – and help them trust it.
                     That's why we've curated resources to help you keep up to date with clinical
                     reserch, learn more about Bravecto, and discover more ways to attract and build
@@ -63,8 +63,7 @@
             <div class="col-md-6">
                 <h3>FILTER RESOURCES BY TOPIC / TYPE</h3>
                 <p>
-                    Check the boxes to the right to find additional resources
-                    on using social media to grow your business.
+                    Check the boxes to the right to find resources about Bravecto filtered by topic or type.
                 </p>
             </div>
             <div class="col-md-6">
