--- a/ProfSite/Views/BravoVets/unlinked-accounts.cshtml
+++ b/ProfSite/Views/BravoVets/unlinked-accounts.cshtml
@@ -7,7 +7,11 @@
     ViewBag.DisplaySubnavigation = false;
 }
 @section subheaderleft {
-    <strong class="unlinked-subheaderleft">Link your social profiles for the full BravoVets experience.</strong>
+    <strong class="unlinked-subheaderleft">
+        <a href="/editprofile">
+            Link your social profiles for the full BravoVets experience.
+        </a>
+    </strong>
 }
 <div class="container">
     <div class="row simpleheaderrow">
@@ -18,11 +22,11 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend your network with Bravovets</h1>
+                <h1>Extend your network with BravoVets</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4>
-                    Link your Facebook and Twitter accounts to Bravovets for support in strengthening your ties
+                    Link your Facebook and Twitter accounts to BravoVets for support in strengthening your ties
                     with new and existing customers through social media.
                 </h4>
             </div>
@@ -44,7 +48,7 @@
         </p>
     </div>
 </div>
-<div class="static-body unlinkedaccounts-body grey">
+<div class="static-body unlinkedaccounts-body leftaligned grey">
     <div class="container">
         <div class="row">
             <h2>EXPAND YOUR SOCIAL VISIBILITY</h2>
@@ -62,7 +66,7 @@
                             The key to reaching pet owners in your community is to be present where they are.
                             Facebook, with its more than 1.25 billion members, makes that a high probability. Link your Facebook to share content that can help you grow relationships with your customers
                             by demonstrating your clinic's expertise, knowledge and caring on a personal level.
-                            <a href="#">LEARN HOW TO GET STARTED</a>
+                            <a href="#facebooksection">LEARN HOW TO GET STARTED</a>
                         </p>
                     </div>
                 </div>
@@ -77,7 +81,7 @@
                             authority in leading-edge veterinary treatments. Link your Twitter
                             to build and reach an audience of followers - of both your customers and others around the world
                             - with the latest news and trends relevant to animal health.
-                            <a href="#">LEARN HOW TO GET STARTED</a>
+                            <a href="#twittersection">LEARN HOW TO GET STARTED</a>
                         </p>
                     </div>
                 </div>
@@ -119,10 +123,6 @@
                     }
                     <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                 </a>
-                <a class="btn btn-default" href="/editprofile">
-                    UPDATE YOUR PROFILE
-                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                </a>
             </div>
         </div>
     </div>
@@ -134,15 +134,18 @@
             FLEA AND TICK PROTECTION IN A CHEW.
         </h2>
         <p>
-            You strive to provide the best protection to all of the dogs you treat. And, with the first and only chewable flea and tick protection that lasts up to 12 weeks, you can. Bravecto is a breakthrough in flea and tick protection that starts working in just 2 hours – and keeps working up to 3X longer than any other monthly chewable or topical available. Close the gaps in between protection by giving pet owners fewer chances to forget – and help keep dogs healthier, longer. Plus, when you prescribe Bravecto, Merck Animal Health provides support every step of the way, with informational resources, marketing toolkits and social media tools, so you can be confident in your decision.
-            <a href="/products">LEARN MORE ABOUT BRAVECTO PRODUCTS</a>
+            You strive to provide the best protection to all of the dogs you treat. And, with the first and only chewable flea and tick protection that lasts up to 12 weeks, you can. <a href="/innovation">Bravecto is a breakthrough in flea and tick protection</a> that starts working in just 2 hours – and keeps working up to 3X longer than any other monthly chewable or topical available. <a href="/adherence">Close the gaps in between protection</a> by giving pet owners fewer chances to forget – and help keep dogs healthier, longer. Plus, when you prescribe Bravecto,
+            <a href="support">MSD</a> support every step of the way, with informational resources, marketing toolkits and social media tools, so you can be confident in your decision.
+            <br /><a href="/products">LEARN MORE ABOUT BRAVECTO PRODUCTS ></a>
         </p>
         <h2>
             EXTEND RELATIONSHIPS WITH PET OWNERS<br />
             BEYOND THE OFFICE TO KEEP THEM COMING BACK.
         </h2>
         <p>
-            The importance of being visible online cannot be overstated. It is the single most powerful tool in your arsenal for building engagement with pet owners – and ensuring their involvement with the treatments you recommend. That’s because pet owners actively use the internet to connect with like-minded animal lovers and to find useful information about pet health and wellness. Social media provides the opportunity to connect with the 70%1 of pet owners that search pet-related topics online every week, wherever they are.
+            The importance of being visible online cannot be overstated. It is the single most powerful tool in your arsenal for building engagement with pet owners – and ensuring their involvement with the treatments you recommend. That’s because pet owners actively use the internet to connect with like-minded animal lovers and to find useful information about pet health and wellness. Social media provides the opportunity
+            to connect with the 70%<sup>1</sup> of pet owners that search pet-related topics online every week, wherever they are.
+            <br />
             <br />
             When you use BravoVets, you gain an exclusive, easy-to-use social tool that consolidates your engagements with customers, pet owners and followers on Facebook and Twitter into one platform. And, it provides you with curated content ready to share with your followers. So you can easily reach, connect, and create deeper relationships with pet owners – ultimately driving more awareness for, and loyalty to, your business.
         </p>
@@ -155,7 +158,7 @@
         </div>
     </div>
 </div>
-<div class="container static-body">
+<div id="facebooksection" class="container static-body">
     <h2 class="green linkedaccountmainheader">CREATING A PRESENCE ON FACEBOOK REQUIRES SOME UP-FRONT STRATEGY AND SETUP.</h2>
     <p>
         If you already have a Facebook account for your veterinary practice,
@@ -169,7 +172,6 @@
                 <text>link it now</text>
             }
         </a>
-
     </p>
     <div class="text-center">
         <img src="~/Content/img/fb-icon-lg.png" />
@@ -231,7 +233,7 @@
         </p>
     </div>
 </div>
-<div class="static-section unlinkedaccountbottom">
+<div id="twittersection" class="static-section unlinkedaccountbottom">
     <div class="container">
         <div class="static-overlay bggreen">
             <h2>EXTEND YOUR AUTHORITY IN LEADING-EDGE <br />VETERINARY TREATMENTS ON TWITTER</h2>
@@ -338,7 +340,7 @@
 <div class="container">
     <div class="row">
         <p>
-            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            * BRAVECTO is effective against <span class="italic">Rhipicephalus sanguineus</span> (brown dog tick) for 8 weeks after dosing.
             The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
         <p>
